Replace "new Long" by "Long.valueOf" based on findbugs suggestiono.